# awesome-free-ai-coding

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  blocklist.yaml  index.json  pyproject.toml  registry.yaml
.github/ISSUE_TEMPLATE/: suggest-a-service.yml
.github/workflows/: ci.yml  update.yml
assets/: README.md
configs/: free-llm.env.example  opencode.json
src/freetier_radar/: discovery.py  models.py  prober.py  render.py  scout.py
templates/: README.md.j2
tests/: test_discovery.py  test_models.py  test_prober.py  test_render.py  test_scout.py
