[project]
name = "freetier-radar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.scripts]
freetier-probe = "freetier_radar.prober:main"
freetier-scout = "freetier_radar.scout:main"
freetier-render = "freetier_radar.render:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freetier_radar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
